Added date and datetime usage example
